--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,7 +209,12 @@ text-align: center;
    max-width: 80%;
  }
 }
+iframe{
+  
+    max-width: 100%;
+    width: auto\9; /* ie8 */
 
+}
 .row{
   padding-left: 2%;
   margin: 0, 0, 0, 0;
