change css names

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,7 +139,7 @@ textarea{
   text-align: center;
   font-size: 14pt;
 }
-.rpg-game{
+.Project2{
   background-image: url("../images/See-The-Stars.jpg");
   background-size: 100%
 }
