tweak portfolio image size on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,10 @@ iframe{
       margin: auto;
       text-align: center
   }
- 
+  .portfolio{
+    width: 320px;
+    height: 240px;
+   }
 
 
 }
@@ -262,4 +265,8 @@ iframe{
 section {
   width: 90%;
 }
+.portfolio{
+  width: 320px;
+  height: 240px;
+ }
 }
