--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,7 @@ textarea{
   color: #f5f5f5;
 }
 .paddbottom {
-  border: 1px solid transparent;
+  padding-bottom: 50px;
 }
 .color {
   background-color:#4aaaa5;
